@@ -1,5 +1,5 @@
 plugins {
-    id("fabric-loom") version "1.9"
+    id("fabric-loom") version "1.7.4"
     `maven-publish`
 }
 
@@ -15,7 +15,7 @@ dependencies {
     minecraft("com.mojang:minecraft:1.21.4")
     mappings("net.fabricmc:yarn:1.21.4+build.8:v2")
     modImplementation("net.fabricmc:fabric-loader:0.16.9")
-    modImplementation("net.fabricmc.fabric-api:fabric-api:0.112.2+1.21.4")
+    modImplementation("net.fabricmc.fabric-api:fabric-api:0.110.0+1.21.4")
 }
 
 java {
@@ -28,8 +28,4 @@ sourceSets {
             exclude("**/addon/**")
         }
     }
-}
-
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
 }
